- Fixed catalaog overflow

--- a/src/index.css
+++ b/src/index.css
@@ -53,6 +53,8 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  transition: 
+    background-color 250ms ease-in-out;
 }
 
 body {
@@ -64,6 +66,7 @@ body {
   align-items: flex-start;
   min-height: 100vh;
   width: 100%;
+
 }
 
 
